--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,9 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background-image: url(../../public/tictactoe.jpeg);
+  min-height: 98.5vh;
+  width: 100%;
+  color: #ededed;
   font-family: Arial, Helvetica, sans-serif;
 }
