--- a/src/components/Tictactoe.css
+++ b/src/components/Tictactoe.css
@@ -3,11 +3,13 @@
 }
 .title{
     margin-top: 10px;
-    color: white;
+    color: #13c3e2;
     font-size: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(32, 3, 59, 0.623);
+    border-radius: 50px;
 }
 
 .resert{
@@ -17,9 +19,9 @@
     outline: none;
     cursor: pointer;
     border-radius: 50px;
-    background-color: #1f3540;
+    background-color: #1e172b;
     font-size: 26px;
-    color: #26ffcb;
+    color: #13c3e2;
     margin-top: 5px;
 }
 
@@ -27,10 +29,11 @@
     display: flex;
     height: 150px;
     width: 150px;
-    background-color: #1f3540;
+    background-color: #41045e;
     border: 4px solid #0f1b21;
     border-radius: 12px;
     cursor: pointer;
+    justify-content: center;
 }
 
 .board{
@@ -41,3 +44,15 @@
     margin: auto;
 }
 
+.flash {
+    animation: flashAnimation 1s infinite alternate;
+}
+
+@keyframes flashAnimation {
+    0% {
+        background-color: transparent;
+    }
+    100% {
+        background-color: rgba(255, 0, 0, 0.5);
+    }
+}
